--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Quiz - Minicomputers</title>
         <link rel="stylesheet" href="dist/styles.css" />
-        <script src="https://unpkg.com/vue@next"></script>
+        <script src="https://unpkg.com/vue@3.0.2"></script>
     </head>
     <body class="antialiased text-gray-600 bg-gray-200">
         <div class="flex w-full h-screen justify-center items-center" id="app">
